sg.tf
resource "aws_security_group" "lb" {
  name   = "ecs-alb-security-group"
  vpc_id = aws_vpc.ecs-vpc.id

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
